fix knockback regression and crash with extractor proj entity, more cleanup